<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.leonardo.tests</groupId>
	<artifactId>misc-tests</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>misc-tests</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.5.0</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<dependency>
			<groupId>com.google.code.simple-spring-memcached</groupId>
			<artifactId>spring-cache</artifactId>
			<version>4.1.3</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.simple-spring-memcached</groupId>
			<artifactId>xmemcached-provider</artifactId>
			<version>4.1.3</version>
		</dependency>

		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>

		<dependency>
			<groupId>com.maciejwalkowiak.spring</groupId>
			<artifactId>spring-boot-startup-report</artifactId>
			<version>0.2.0</version>
			<optional>true</optional>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<includes>
						<include>*UT.java</include>
						<include>*Test.java</include>
					</includes>
					<properties>
						<configurationParameters>
							junit.jupiter.execution.parallel.enabled = true
							junit.jupiter.execution.parallel.config.strategy = dynamic
							junit.jupiter.execution.parallel.mode.default = concurrent
							junit.jupiter.execution.parallel.mode.classes.default = concurrent
						</configurationParameters>
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>extract-jar</id>
						<phase>verify</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>unzip</executable>
							<arguments>
								<argument>-o</argument>
								<argument>${project.build.directory}/${project.build.finalName}.jar</argument>
								<argument>-d</argument>
								<argument>${project.build.directory}/extracted</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>run-jdeps</id>
						<phase>verify</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>jdeps</executable>
							<arguments>
								<argument>--ignore-missing-deps</argument>
								<argument>-q</argument>
								<argument>--recursive</argument>
								<argument>--multi-release</argument>
								<argument>${java.version}</argument>
								<argument>--print-module-deps</argument>
								<argument>--class-path</argument>
								<argument>${project.build.directory}/extracted/BOOT-INF/lib/*</argument>
								<argument>${project.build.directory}/${project.build.finalName}.jar</argument>
							</arguments>
							<outputFile>${project.build.directory}/jdeps-output.txt</outputFile>
						</configuration>
					</execution>
					<execution>
						<id>property-file</id>
						<phase>verify</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>sh</executable>
							<arguments>
								<argument>-c</argument>
								<argument>echo "$(echo -n 'BP_JVM_JLINK_ARGS='; cat ${project.build.directory}/jdeps-output.txt)" > ${project.build.directory}/jdeps-output.txt</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>read-project-properties</goal>
						</goals>
						<configuration>
							<files>
								<file>${project.build.directory}/jdeps-output.txt</file>
							</files>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<image>
						<builder>bellsoft/buildpacks.builder:glibc</builder>
						<env>
							<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
							<BP_JVM_JLINK_ENABLED>true</BP_JVM_JLINK_ENABLED>
							<BP_JVM_JLINK_ARGS>--add-modules ${BP_JVM_JLINK_ARGS} --compress=2 --no-header-files --no-man-pages --strip-debug</BP_JVM_JLINK_ARGS>
						</env>
					</image>
					<layers>
						<enabled>true</enabled>
					</layers>
				</configuration>
				<executions>
					<execution>
						<phase>deploy</phase>
						<goals>
							<goal>build-image</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
